--- a/css/style.css
+++ b/css/style.css
@@ -164,22 +164,14 @@ body {
     box-shadow: none;
 }
 
-.conteudoPrincipal_SobreMim .container {
+.conteudoPrincipal_SobreMim .container {    
     max-width: 80%;
-    height: 80%;
-    max-height: 600px;
+    height: 100vh;
     
-    position: fixed;
-    top: 85px;
-    left: 0;
-    right: 0;
+    position: relative;
     z-index: 10;
 
-    margin: 0 auto;
-
-    border-radius: 12px;
-
-    background-color: rgba(26, 26, 26, 0.965);
+    margin: 15px auto 0;
 }
 
 .animationFadeIn {
@@ -192,11 +184,15 @@ body {
 }
 
 .conteudoPrincipal_SobreMim-article {
-    height: 100%;   
-
+    position: absolute;
+    
+    max-height: 80vh;
+    
     padding: 20px;
+    
+    border-radius: 12px;
 
-    border-radius: 10px;
+    background-color: rgba(26, 26, 26, 0.965);
 
     overflow: auto;
 }
@@ -226,9 +222,18 @@ body {
     border-radius: 12px;
 }
 
+.conteudoPrincipal_SobreMim-article h1 {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 2em;
+    font-weight: bold;
+    color: white;
+
+    margin-bottom: 25px;
+}
+
 .conteudoPrincipal_SobreMim-descricao {
-    font-family: Lato;
-    font-size: .9em;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 1.3em;
     line-height: 1.5;
     text-align: justify;
     color: white;
@@ -236,6 +241,18 @@ body {
     margin-bottom: 15px;
 }
 
+.conteudoPrincipal_SobreMim-descricao > b {
+    font-weight: bold;
+    color: rgb(12, 185, 185);
+}
+
+.conteudoPrincipal_SobreMim-descricao b a { 
+    color: rgb(243, 219, 3);
+}
+
+.conteudoPrincipal_SobreMim-descricao b a:hover {
+    text-decoration: underline;
+}
 
 /* PROJETOS */
 
@@ -282,12 +299,17 @@ body {
 .conteudoPrincipal_Projetos-img {
     max-width: 100%;
 
-    border-radius: 8px;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
 }
 
 .conteudoPrincipal_Projetos-descricao {
     margin: 1.2em;
     line-height: 1.3;
+}
+
+.conteudoPrincipal_Projetos-descricao p > b {
+    font-weight: bold;
 }
 
 .conteudoPrincipal_Projetos-titulo {
@@ -297,6 +319,8 @@ body {
     text-transform: capitalize;
     text-align: left;
     color: rgb(22, 22, 22);
+
+    word-break: break-word;
 
     margin: 1em 0;
 }
@@ -325,7 +349,39 @@ body {
 }
 
 
-@media screen and (max-width: 679px) {
+
+@media screen and (max-width: 768px) {
+    .cabecalhoPrincipal .container {
+        justify-content: center;
+        flex-direction: column;
+    }
+
+    .cabecalhoPrincipal-titulo {
+        text-align: center;
+        margin-bottom: 20px;
+    }
+
+    .cabecalhoPrincipal-nav-ul {
+        justify-content: center;
+    }
+
+    .cabecalhoPrincipal-nav-ul-itens {
+        margin: 0;
+        padding: 10px;
+    }
+
+    .conteudoPrincipal_SobreMim-article {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .conteudoPrincipal_SobreMim-foto {
+        width: 50%;
+        float: none;
+        margin-bottom: 20px;
+    }
+
     .subtitulo {
         text-align: center;
     }
@@ -336,7 +392,7 @@ body {
     }
 }
 
-@media screen and (min-width: 680px) and (max-width: 929px) {
+@media screen and (min-width: 769px) and (max-width: 929px) {
     .conteudoPrincipal_Projetos-postProjetos {
         flex: 0 0 calc((100% - (20px * 2)) / 2);
     }
