--- a/css/style.css
+++ b/css/style.css
@@ -410,6 +410,9 @@ body {
         display: flex;
         flex-direction: column;
         align-items: center;
+
+        max-height: 75vh;
+        top: -11%;
     }
     
     .conteudoPrincipal_SobreMim-foto {
